Fixed a lot
